Issue #16421: allow to load multiple modules from the same shared object.

Patch by Václav Šmilauer.