Tools/msi/msi.py
@@ -101,6 +101,7 @@ extensions = [
     '_decimal.pyd',
     '_testbuffer.pyd',
     '_sha3.pyd',
+    '_testimportmultiple.pyd',
 ]
 
 # Well-known component UUIDs
